--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -71,6 +71,8 @@
       </div>
       }
 
+      <span class="following-count">Following 100</span>
+
       <!-- Profile context menu button -->
       <button mat-icon-button class="profile-menu-button" [matMenuTriggerFor]="profileMenu"
         matTooltip="Profile options">
