--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -173,6 +173,10 @@
   }
 }
 
+.following-count {
+  color: red;
+}
+
 .qr-popover {
   position: absolute;
   top: 100%;  /* Changed from 'bottom: 100%' to 'top: 100%' */
