--- a/src/app/pages/profile/profile-home/profile-home.component.html
+++ b/src/app/pages/profile/profile-home/profile-home.component.html
@@ -6,7 +6,7 @@
 </div> -->
 
     <!-- Navigation tabs -->
-    <nav mat-tab-nav-bar [tabPanel]="tabPanel" mat-stretch-tabs="false" mat-align-tabs="start">
+    <nav mat-tab-nav-bar [tabPanel]="tabPanel" mat-stretch-tabs="true" mat-align-tabs="start">
       @for (link of navLinks; track link.path) {
         <a mat-tab-link
            [routerLink]="link.path"
