feat: integrate ProfileStateService for managing following list and current profile pubkey

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -72,7 +72,7 @@
       }
 
       <span class="following-count" [routerLink]="'following'" [queryParamsHandling]="'preserve'">
-        Following {{ followingList().length }}
+        Following {{ profileState.followingList().length }}
       </span>
 
       <!-- Profile context menu button -->
