feat: integrate ProfileStateService for loading following list and enhance media loading with mock data

--- a/src/app/pages/profile/profile-connections/profile-connections.component.html
+++ b/src/app/pages/profile/profile-connections/profile-connections.component.html
@@ -1,4 +1,10 @@
 <div class="connections-container">
+
+  @for (item of profileState.followingList(); track item) {
+    {{ item}} <br>
+  }
+
+
   @if (isLoading()) {
     <app-loading-overlay message="Loading connections..."></app-loading-overlay>
   } @else if (error()) {
