--- a/src/app/pages/profile/following/following.component.scss
+++ b/src/app/pages/profile/following/following.component.scss
@@ -7,18 +7,22 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: var(--mat-app-background-color);
+  // background-color: var(--mat-app-background-color);
 }
 
 .following-header {
   display: flex;
   align-items: center;
   padding: 16px;
-  background-color: var(--mat-app-background-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
   z-index: 2;
+
+  background-color: var(--mat-sidenav-content-background-color, var(--mat-sys-background));
+ 
+  // background-color: var(--mat-sys-outline);
+  // border-bottom: 1px solid var(--mat-divider-color, var(--mat-sys-outline));
 }
 
 .back-button {
