feat: refactor FollowingComponent and profile layout for improved structure and scrolling behavior

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -165,7 +165,7 @@
     </div>
   </div>
 
-  <div class="profile-content">
+  <div class="profile-outlet">
     <router-outlet></router-outlet>
   </div>
   } @else {
